--- a/openapi/apispec.yaml
+++ b/openapi/apispec.yaml
@@ -3,7 +3,7 @@ info:
   title: University Classes API
   version: '1.0'
 servers:
-  - url: 'https://localhost:8000/api'
+  - url: 'http://localhost:8000/api'
 paths:
   /students:
     get:
@@ -149,7 +149,7 @@ paths:
   /students/{studentId}/classes:
     get:
       tags:
-        - "Students"
+        - 'Students'
       summary: Get list of student's enrolled classes
       parameters:
         - $ref: '#/components/parameters/studentId'
@@ -172,11 +172,18 @@ paths:
                     items:
                       type: object
                       properties:
-                        classId:
+                        id:
                           type: number
-                        className:
+                        name:
                           type: string
-                          example: "Data Structure and Algorithms"
+                          example: 'Data Structure and Algorithms'
+                        startAt:
+                          type: string
+                          example: '07:00:00'
+                        endAt:
+                          type: string
+                          example: '09:00:00'
+
         404:
           description: Failed to get student's enrolled class due to id is non existent
           content:
@@ -193,7 +200,7 @@ paths:
   /classes:
     get:
       tags:
-        - "Classes"
+        - 'Classes'
       summary: Get all class details
       responses:
         200:
@@ -215,7 +222,7 @@ paths:
                       $ref: '#/components/schemas/Classes'
     post:
       tags:
-        - "Classes"
+        - 'Classes'
       summary: Add a new class
       requestBody:
         $ref: '#/components/requestBodies/CreateClass'
@@ -241,7 +248,7 @@ paths:
   /classes/{classId}:
     get:
       tags:
-        - "Classes"
+        - 'Classes'
       summary: Get class with Id parameter
       parameters:
         - $ref: '#/components/parameters/classId'
@@ -276,7 +283,7 @@ paths:
     patch:
       summary: Update a class with Id parameter
       tags:
-        - "Classes"
+        - 'Classes'
       parameters:
         - $ref: '#/components/parameters/classId'
       requestBody:
@@ -303,7 +310,7 @@ paths:
     delete:
       summary: Delete a class with Id parameter
       tags:
-        - "Classes"
+        - 'Classes'
       responses:
         200:
           description: Success to delete a class with Id parameter
@@ -326,7 +333,7 @@ paths:
   /classes/{classId}/students:
     get:
       tags:
-        - "Classes"
+        - 'Classes'
       summary: Get list of enrolled students with classId parameter
       parameters:
         - $ref: '#components/parameters/classId'
@@ -351,10 +358,14 @@ paths:
                       properties:
                         id:
                           type: number
-                        studentId: 
-                          type: number
-                        studentName:
+                        name:
                           type: string
+                        email:
+                          type: string
+                        active:
+                          type: boolean
+                        semester:
+                          type: number
         404:
           description: Failed to get list of enrolled students due to classId is non existent
           content:
@@ -438,7 +449,7 @@ components:
     CreateOrUpdateClassRequest:
       type: object
       properties:
-        name: 
+        name:
           type: string
         startAt:
           type: string
@@ -487,19 +498,19 @@ components:
           example: 'NOT FOUND'
         data:
           type: string
-          example: 'Id: 5 not found!'
+          example: 'Id: 5 was not found'
 
   parameters:
     studentId:
       name: studentId
-      in: query
+      in: path
       required: true
       description: The id of student
       schema:
         type: string
     classId:
       name: classId
-      in: query
+      in: path
       required: true
       description: The id of class
       schema:
